2011-04-18  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm,
	  lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/DB.pm,
	  lib/PandoraFMS/Core.pm: Adding support for Oracle. The main loop
	  works now.

2011-04-14 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* util/tentacle_serverd: Changed get_pid function now also checks
	tentacle_port when searchs for running tentacle server. This feature	
	allow you to run 2 tentacle server in different ports 1 for Pandora and
	1 for Babel.

2011-04-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/WMIServer.pm,
	  lib/PandoraFMS/PluginServer.pm,
	  lib/PandoraFMS/DB.pm,
	  lib/PandoraFMS/ProducerConsumerServer.pm,
	  lib/PandoraFMS/PredictionServer.pm,
	  lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/ReconServer.pm,
	  bin/pandora_server,
	  util/pandora_db.pl,
	  util/pandora_manage.pl,
	  util/recon_scripts/snmpdevices.pl: Adding support for PostgreSQL and
	  Oracle (not complete).

2011-04-13  Sancho Lerena <slerena@artica.es>

        * lib/PandoraFMS/ReconServer.pm: Fixed bug #3286027. Fix also
        the "non finished" status for the Script Recon tasks, and as
        new feature implements the "manual" recon task, works only when
        you press the button.


2011-04-10  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/DB.pm: Moved mysql_enable_utf8 to after database
	connection. It is to avoid coding conversion against multibyte
	characters by mysql.

2011-04-04  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Added UTF-8 flags deletion from multibyte
	characters when files are opened.

	* lib/PandoraFMS/DB.pm: Added mysql_enable_utf8. It enables character
	semantics (support for multibyte characters).

2011-03-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/create_integria_incident.sh: Fixed an error in help text.
